--- a/vignettes/FancyPackRLiU6.Rmd
+++ b/vignettes/FancyPackRLiU6.Rmd
@@ -38,17 +38,17 @@ knapsack_objects <-data.frame(
     w=sample(1:4000, size = n, replace = TRUE),
     v=runif(n = n, 0, 10000))
 
-## Question How much time does it takes to run the algorithm for n = 16 objects?
+## 1.How much time does it takes to run the algorithm for n = 16 objects?
 start<-proc.time()
 brute_force_knapsack(x = knapsack_objects[1:16,], W = 3500) 
 end<-proc.time()
 (end-start)[2]   ## 0.06
-## Question How much time does it takes to run the algorithm for n = 500 objects?
+## 2.How much time does it takes to run the algorithm for n = 500 objects?
 start<-proc.time()
 knapsack_dynamic(x = knapsack_objects[1:500,], W = 3500)[2] 
 end<-proc.time()
 (end-start)[2]   ## 0.02
-## Question How much time does it takes to run the algorithm for n = 1000000 objects?
+## 3.How much time does it takes to run the algorithm for n = 1000000 objects?
 set.seed(42)
 n<- 1000000
 knapsack_objects <-data.frame(
@@ -58,13 +58,13 @@ start<-proc.time()
 system.time(greedy_knapsack(x = knapsack_objects, W = 3500))[2] 
 end<-proc.time()
 (end-start)[2]   ## 0.01
-## Question What performance gain could you get by trying to improving your code?
-    ## lineprof show that binary convertion is one of the biggest bottleneck, and a suggestion is presented in the next question
-## Question What performance gain could you get by using Rcpp and C++?
+## 4.What performance gain could you get by trying to improving your code?
+  ## lineprof show that binary convertion is one of the biggest bottleneck, and a suggestion is presented in the next question
+## 5.What performance gain could you get by using Rcpp and C++?
 start<-proc.time()
 brute_force_knapsack(x = knapsack_objects[1:16,], W = 3500,fast=TRUE) 
 end<-proc.time()
-(end-start)[2]   ## 0.05, Rcpp function improved performance with almost 17% faster 
-## Question What performance gain could you get by parallelizing brute force search? 
-    ##
+(end-start)[2]   
+  ## 0.05, Rcpp function improved performance with almost 17% faster 
+
 ```
